# movie_book

./: .gitignore  BookingEngine.cpp  BookingEngine.h  BookingLibrary.h  BookingServer.cpp  CMakeLists.txt  Dockerfile  Doxyfile  README.md  __azurite_db_queue__.json  conanfile.txt  main.cpp  movies.json  run.sh  tests.cpp  theatres.json
html/: _booking_engine_8cpp.html  _booking_engine_8cpp_8o_8d.html  _booking_engine_8h.html  _booking_engine_8h_source.html  _booking_library_8h.html  _booking_library_8h_source.html  _booking_server_8cpp.html  _booking_server_8h.html  _booking_server_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  build_2_c_make_files_23_828_81_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build_2_c_make_files_23_828_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  class_booking-members.html  class_booking.html  class_booking_engine-members.html  class_booking_engine.html  class_client-members.html  class_client.html  class_hall-members.html  class_hall.html  class_movie-members.html  class_movie.html  class_test-members.html  class_test.html  class_theatre-members.html  class_theatre.html  classes.html  cmake-build-debug_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  cmake-build-debug_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  dir_32bce2048752376edca107ddb76dba86.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_583dbc8fea55942f58d395f74897701e.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_67a1ef42729cc10b4e506d0937c5be5e.html  dir_6b26403ba0a0c99a4be83950e5f7d1ff.html  dir_7a9c7094c62de71bbec4b12c7c975b93.html  dir_92ccdc2ca6bddc7ae4098430de6e9f10.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  (+43 more)
latex/: _booking_engine_8cpp.tex  _booking_engine_8cpp_8o_8d.tex  _booking_engine_8h.tex  _booking_engine_8h_source.tex  _booking_library_8h.tex  _booking_library_8h_source.tex  _booking_server_8cpp.tex  _booking_server_8h.tex  _booking_server_8h_source.tex  annotated.tex  build_2_c_make_files_23_828_81_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  build_2_c_make_files_23_828_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  class_booking.tex  class_booking_engine.tex  class_client.tex  class_hall.tex  class_movie.tex  class_test.tex  class_theatre.tex  cmake-build-debug_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  cmake-build-debug_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  dir_32bce2048752376edca107ddb76dba86.tex  dir_583dbc8fea55942f58d395f74897701e.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_67a1ef42729cc10b4e506d0937c5be5e.tex  dir_6b26403ba0a0c99a4be83950e5f7d1ff.tex  dir_92ccdc2ca6bddc7ae4098430de6e9f10.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_de1d559ee29b9529c3eb971659538ce1.tex  dir_e9e43ac2baf5998eff85f8de3e211121.tex  files.tex  main_8cpp.tex  (+15 more)
lib/: BookingEngine.h  BookingLibrary.h  BookingServer.cpp  BookingServer.h  CMakeLists.txt
tests/: CMakeLists.txt  tests.cpp
(+50 files in other folders)
